# llm_ft

./: .gitignore  LICENSE  pyproject.toml
src/llm_ft/: __init__.py  llm_ft.py
