[project]
name = "llm-ft"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Þorgeir Eyfjörð Sigurðsson", email = "thorgeirsigurd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.2.0",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "transformers[torch]>=4.48.0",
]

[project.scripts]
llm-ft = "llm_ft:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hatch-vcs>=0.4.0",
    "ruff>=0.9.1",
]